--- a/style.css
+++ b/style.css
@@ -28,6 +28,17 @@ html{
 }
 
 
+
+@media (max-width:576px){
+    .container{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .box{
+        grid-column: auto;
+        grid-row: auto;
+    }
+}
 /* second container */
 .container-2{
     background-color: grey;
@@ -50,7 +61,17 @@ html{
     grid-column:3/4 ;
 }
 
-
+@media (max-width:576px){
+    .container-2{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-2 > .box-1, .box-2{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
+}
 /* third container */
 .container-3{
     background-color: grey;
@@ -72,6 +93,18 @@ html{
 
 .container-3 > .box-4{
     grid-column: 1/5;
+}
+
+@media (max-width:576px){
+    .container-3{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-3 > .box-1, .box-3, .box-4{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
 }
 
 /* fourth container */
@@ -103,6 +136,17 @@ html{
 }
 
 
+@media (max-width:576px){
+    .container-4{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-4 > .box-1, .box-2, .box-4, .box-5{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
+}
 /* conainer 5 */
 .container-5{
     background-color: grey;
@@ -113,6 +157,18 @@ html{
     height: 80vh;
     margin: 100px 200px;
     padding: 2rem;
+}
+
+@media (max-width:576px){
+    .container-5{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-5 > .box{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
 }
 
 /* conainer 6 */
@@ -143,6 +199,17 @@ html{
     background-color: lightcoral;
 }
 
+@media (max-width:576px){
+    .container-6{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-2 > .box-1, .box-7, .box-11{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
+}
 
 /* conainer 7 */
 .container-7{
@@ -196,7 +263,17 @@ html{
     padding: 30px; */
 }
 
-
+@media (max-width:576px){
+    .container-7{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-2 > .box-1, .box-2, .box-3, .box-4{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
+}
 /* contaier 8 */
 .container-8{
     background-color: grey;
@@ -219,7 +296,17 @@ html{
     background-color: orange;
 }
 
-
+@media (max-width:576px){
+    .container-8{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-8 > .box-8, .box-9{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
+}
 /* contaier 9 */
 .container-9{
     background-color: grey;
@@ -249,3 +336,15 @@ html{
     
      
  }
+
+ @media (max-width:576px){
+    .container-9{
+      grid-template-columns: repeat(1, 1fr);
+      margin: 50px 50px;
+    }
+    .container-2 > .box-1, .box-2, .box-3{
+        grid-column: auto;
+        grid-row: auto;
+        /* background-color: blue; */
+    }
+}
